[gd_scene load_steps=8 format=2]

[ext_resource path="res://SCRIPTS/main_screen.gd" type="Script" id=1]
[ext_resource path="res://LETTERS/ENIGMA.png" type="Texture" id=2]
[ext_resource path="res://LETTERS/RANDOM_PLAY.png" type="Texture" id=3]
[ext_resource path="res://LETTERS/settings.png" type="Texture" id=4]
[ext_resource path="res://LETTERS/achievement.png" type="Texture" id=5]
[ext_resource path="res://FONT/nyala.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[node name="main_screen" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 208.0
margin_bottom = 375.0

[node name="game_name" type="TextureRect" parent="Control"]
margin_left = 20.0
margin_top = 100.0
margin_right = 594.0
margin_bottom = 288.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="rand_play" type="TextureButton" parent="Control"]
margin_left = 80.0
margin_top = 210.0
margin_right = 313.0
margin_bottom = 342.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 3 )

[node name="settings" type="TextureButton" parent="Control"]
margin_top = 10.0
margin_right = 836.0
margin_bottom = 847.0
rect_scale = Vector2( 0.04, 0.04 )
texture_normal = ExtResource( 4 )

[node name="achievement" type="TextureButton" parent="Control"]
margin_left = 170.0
margin_top = 10.0
margin_right = 650.0
margin_bottom = 700.0
rect_scale = Vector2( 0.06, 0.06 )
texture_normal = ExtResource( 5 )

[node name="best_score" type="Label" parent="Control"]
margin_left = 12.0
margin_top = 170.0
margin_right = 126.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 1 )
text = "Your Best Score is"

[node name="background_timer" type="Timer" parent="."]
autostart = true

[node name="game_name_tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="achievement_tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="settings_tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="play_tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[connection signal="pressed" from="Control/rand_play" to="." method="_on_rand_play_pressed"]
[connection signal="pressed" from="Control/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Control/achievement" to="." method="_on_achievement_pressed"]
[connection signal="timeout" from="background_timer" to="." method="_on_background_timer_timeout"]
[connection signal="tween_completed" from="game_name_tween" to="." method="_on_game_name_tween_tween_completed"]
[connection signal="tween_completed" from="achievement_tween" to="." method="_on_achievement_tween_tween_completed"]
[connection signal="tween_completed" from="settings_tween" to="." method="_on_settings_tween_tween_completed"]
[connection signal="tween_completed" from="play_tween" to="." method="_on_play_tween_tween_completed"]
